career and education update

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="row">
                     <div class="col-lg-12 col-md-12 text-center">
                         <h1 class="mb-4 display-4 fade fade-object" id="name_fade_in">Oliver Brown</h1>
-                        <h3 class="h4 fade fade-object" id="desc_fade_in" style="margin-bottom : 3.5rem"><em>is an aspiring software engineer from London.</em></h3>
+                        <h3 class="h4 fade fade-object" id="desc_fade_in" style="margin-bottom : 3.5rem"><em>is a <span class="coloured">Generative AI Engineer</span> based in London</em></h3>
                         <a class="glow-card btn-l p-3 fade fade-object mt-5" href="#about" id="about_button" style="font-size: 0.9rem" >Learn more about me</a>
                     </div>
                 </div>
@@ -77,11 +77,11 @@
                         <h2 class="mb-5">About Me</h2>
                     </div>
                     <div class = "p-3" id="aboutme">   
-                        <p class="responsive-text">I am a developer passionate about full-stack web development, machine learning and software development.
-                            Currently, I am enrolled at the University of Warwick pursuing a Bachelors degree in Computer Science in my third and final year,
-                            but when I am not studying I like to play the piano and work on personal coding projects.
-                            While I am constantly aiming to refine my skills in full-stack development and machine learning, I am also passionate about learning new skills and technologies.</p>
-                        <p class="responsive-text">Currently, I am looking to leverage my technical expertise and experience into an entry-level Software Development role. Please take a look at <a href="#portfolio" id="portfolio_button">my portfolio</a></p>   
+                        <p class="responsive-text">I am a developer passionate about Generative AI and developing full-stack solutions.
+                            Having just completed my Bachelors degree in Computer Science at the Univeristy of Warwick, I have recently accepted an offer as an incoming Generative AI Engineer at Flutter Entertainment in their R&D Department.</p>
+                            
+                        <p class="responsive-text">Outside of work I look to keep myself busy with a number of personal full-stack projects I have lined up, a few of which can be found on <a target="_blank" href="https://github.com/oliverbrown1">my Github</a>. I also enjoy playing the piano in my freetime.</p>
+                        <p class="responsive-text">Please take a look at <a href="#portfolio" id="portfolio_button">my portfolio</a></p>   
                     </div>
                 </div>
             </section>
@@ -99,15 +99,13 @@
                                 <li class="list-group-item">
                                     <div data-bs-toggle="collapse" href="#info2" role="button" aria-expanded="false" aria-controls="info2" class="hover-underline">
                                         Computer Science BSc, University of Warwick
-                                        <span class="float-end">2022 - present</span>
+                                        <span class="float-end">2022 - 2025</span>
                                     </div>
                                     <div class="collapse" id="info2">
                                         <ul style="padding: 5px; margin-top: 10px;">
                                             <li class="custom-list-item mb-3">
-                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; Currently enrolled in my third and final year at the University of Warwick. 
-                                            </li>
-                                            <li class="custom-list-item mb-3">
-                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; I am completing my dissertation on how Reinforcement Learning can be used in 3D (game) environments to "speedrun".
+                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; Recently graduated from the University of Warwick with a 2:1 and have completed a dissertation exploring the use of Deep Reinforcement Learning in "speedrunning" (3D) games. 
+                                                In this project I learnt a lot about different Reinforcement Learning methods and how to apply them into an agents behaviour using Tensorflow and NumPy, and best practices for training neural nets in general.
                                             </li>
                                         </ul>
                                     </div>
@@ -123,7 +121,7 @@
                                                 <i class="fa-solid fa-arrow-right"></i>&nbsp; Graduated sixth form with an IB Diploma, taking higher Mathematics, Physics and Computer Science. Achieved 43/45 points in total and a 7 in all my higher level subjects.
                                             </li>
                                             <li class="custom-list-item mb-3">
-                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; Completed my Extended Essay on the performance of genetic algorithms on enhancing contrast of images compared to traditional algorithms, which scored an A.
+                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; Completed my Extended Essay on the performance of genetic algorithms on enhancing contrast of images compared to traditional algorithms, which scored an A (highest).
                                             </li>
                                         </ul>
                                     </div>
@@ -134,6 +132,20 @@
                             <h3 class = "mb-5">Work Experience <i class="fas fa-briefcase"></i></h3>
                             <ul class="list-group">
                                 <li class="list-group-item">
+                                    <div data-bs-toggle="collapse" href="#info6" role="button" aria-expanded="false" aria-controls="info6" class="hover-underline">
+                                        Generative AI Engineer, Flutter
+                                        <span class="float-end">Sept 2025 - Present</span>
+                                    </div>
+                                    <div class="collapse" id="info6">
+                                        <ul style="padding: 5px; margin-top: 10px;">
+                                            <li class="custom-list-item mb-3">
+                                                <i class="fa-solid fa-arrow-right"></i>&nbsp; Starting out soon.
+                                            </li>
+                    
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="list-group-item" style="border-top: solid 1px white">
                                     <div data-bs-toggle="collapse" href="#info3" role="button" aria-expanded="false" aria-controls="info3" class="hover-underline">
                                         Software Developer Intern, AVEVA
                                         <span class="float-end">June - Aug, 2024</span>
@@ -315,10 +327,10 @@
                     <div class="content-section-heading text-center">
                         <h2 class="mb-4">Contact Me</h2>
                     </div>
-                    <div style = "margin-bottom: 3rem;">
+                    <div style = "margin-bottom: 4rem;">
                         <p>Please feel free to send me an email below</p>
                     </div>
-                    <ul class="list-inline" style="margin-bottom: 4rem;">
+                    <ul class="list-inline" style="margin-bottom: 8rem;">
                         <li class="list-inline-item">
                             <a class="social-link rounded-circle text-white mr-3" target="_blank" href="mailto:olivertouki@gmail.com"><i class="fa-solid fa-square-envelope"></i></a>
                         </li>
